k8s/gs-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gs-gateway
  name: gs-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gs-gateway
  template:
    metadata:
      labels:
        io.kompose.network/greenstone-network: "true"
        io.kompose.service: gs-gateway
    spec:
      containers:
        - env:
            - name: GS_TREE_URL_HOST
              value: gs-tree
            - name: GS_TREE_URL_PORT
              value: "44402"
            - name: GS_USER_Q_URL_HOST
              value: gs-user-q
            - name: GS_USER_Q_URL_PORT
              value: "44404"
            - name: GS_USER_URL_HOST
              value: gs-user
            - name: GS_USER_URL_PORT
              value: "44403"
            - name: JAEGER_SAMPLER_MANAGER_HOST_PORT
              value: jaeger:5778
            - name: JAEGER_UDP_HOST
              value: jaeger
          image: sanek555/gs-gateway:latest
          name: gs-gateway
          ports:
            - containerPort: 8080
