k8s/gs-user-q-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/asamal/IdeaProjects/greenstone/docker/dc-remote.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gs-user-q
  name: gs-user-q
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gs-user-q
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /Users/asamal/IdeaProjects/greenstone/docker/dc-remote.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/greenstone-network: "true"
        io.kompose.service: gs-user-q
    spec:
      containers:
        - env:
            - name: JAEGER_SAMPLER_MANAGER_HOST_PORT
              value: jaeger:5778
            - name: JAEGER_UDP_HOST
              value: jaeger
            - name: SPRING_DATASOURCE_PASSWORD
              value: compose-postgres
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://db:5432/compose-postgres
            - name: SPRING_DATASOURCE_USERNAME
              value: compose-postgres
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: create
          image: sanek555/gs-user-q:latest
          name: gs-user-q
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
