k8s/gs-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/asamal/IdeaProjects/greenstone/docker/dc-remote.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gs-gateway
  name: gs-gateway
spec:
  ports:
    - name: "44401"
      port: 44401
      targetPort: 8080
  selector:
    io.kompose.service: gs-gateway
status:
  loadBalancer: {}
