k8s/gs-tree-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/asamal/IdeaProjects/greenstone/docker/dc-remote.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gs-tree
  name: gs-tree
spec:
  ports:
    - name: "44402"
      port: 44402
      targetPort: 8080
  selector:
    io.kompose.service: gs-tree
status:
  loadBalancer: {}
