k8s/gs-user-q-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/asamal/IdeaProjects/greenstone/docker/dc-remote.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gs-user-q
  name: gs-user-q
spec:
  ports:
    - name: "44404"
      port: 44404
      targetPort: 8080
  selector:
    io.kompose.service: gs-user-q
status:
  loadBalancer: {}
