k8s/gs-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /Users/asamal/IdeaProjects/greenstone/docker/dc-remote.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gs-user
  name: gs-user
spec:
  type: NodePort
  ports:
    - name: "44403"
      port: 44403
      targetPort: 8080
      nodePort: 30003
  selector:
    io.kompose.service: gs-user
status:
  loadBalancer: {}
